✨ feat: 정적 페이지 기반 페이지네이션 구현, graphql 활용 조건부 필터링 기능 구현

--- a/articles/project/about-eeum-wash_car/index.mdx
+++ b/articles/project/about-eeum-wash_car/index.mdx
@@ -1,8 +1,8 @@
 ---
 title: "이음의 세차 서비스"
 date: "2025-03-25"
-category: "세차"
-tags: ["일하는 방식"]
+category: "프로젝트"
+tags: ["바로바로"]
 slug: "my-first-post"
 hero_image: "./for_icon.png"
 hero_image_alt: "alt image"
