📝 post: 내가 gatsby로 프로젝트를 진행한 이유

--- a/articles/project/why-new-blog/index.mdx
+++ b/articles/project/why-new-blog/index.mdx
@@ -6,7 +6,62 @@ tags: ["Gatsby"]
 slug: "why-new-blog"
 hero_image: "./why_gatsby.png"
 hero_image_alt: "why gatsby"
-hero_image_credit_text: "내가 Gatsby를 선택한 이유"
+hero_image_credit_text: "제가 Gatsby로 블로그를 다시 만든 이유를 말씀드릴게요."
 hero_image_credit_link: ""
 ---
 
+제가 기존 Jekyll 로 배포한 깃허브 블로그를 왜 Gatsby로 다시 개발하고 배포하는지, 왜 블로그와 포트폴리오 프로젝트를 합치기 이 프로젝트를 시작했는지 기록을 남기려합니다.
+
+<hr/>
+
+## 목차
+
+<ul>
+  <li>Gatsby를 선택한 이유</li>
+  <li>블로그와 포트폴리오를 합치는 이유</li>
+</ul>
+
+<hr/>
+
+### 1. Gatsby를 선택한 이유
+
+Gatsby를 선택한 이유를 하나하나 말씀드릴게요.
+
+#### 첫번째, 익숙함
+
+React기반으로 개발된 Gatsby이기에 쉽게 다룰 수 있었어요. 또, 포트폴리오 개발 과정에서 이를 사용한 경험을 보유하고 있어 빠르게 이를 활용해서 서비스를 개발할 수 있었어요.
+
+#### 두번째, 목적에 부합함
+
+Gatsby가 목적에 부합하다고 판단한 이유는 다음과 같아요.
+
+<ul>
+  <li>SEO에 최적화 되어있다.</li>
+  <li>jekyll 기반 블로그는 익숙하지 않았기에 커스텀이 어려웠다.</li>
+  <li>블로그, 포트폴리오 서비스에 정적페이지가 가지는 장점이 크다.</li>
+</ul>
+
+Ruby 기반으로 동작하는 Jekyll 기반 블로그는 익숙하지 않은 문법으로 커스텀 과정이 어려웠어요. 장기적 관점으로 보았을 때, 문법이 익숙한 Gatsby기반 블로그가 가지는 장점이 크다고 판단하여 전환하기로 결정했어요.
+
+프로젝트의 목적, 사용 가능한 기술스택을 고려했을 때 선택할 수 있는 프레임워크는 Next.js와 Gatsby였어요. 그 중 Gatsby를 선택한 이유는 자체적으로 보유한 성능 중심의 Plugin의 장점, Next.js가 개발하려는 서비스에 비해 과한 기능을 제공한다고 판단했기 때문이에요.
+
+#### 세번째, 개인적인 아쉬움
+
+포트폴리오 페이지를 Gatsby로 제작할 때, 개인적으로 아쉬움을 가지고 있었어요. Gatsby의 기능을 부분적으로만 활용해보았다는 생각이 들어 학습 목적을 겸해서 프로젝트를 진행하게 되었어요.
+
+포트폴리오는 페이지 하나로 구성된 프로젝트이기에 데이터를 다루는 복잡한 로직이 없었어요. 그렇기에 Gatsby가 제공하는 핵심 기능 중 하나인 Graphql을 통한 데이터 관리 기능을 사용할 필요가 없었어요.
+
+이에 개인적으로 아쉬움을 많이 가지고 있었고, 포트폴리오와 블로그를 통합하는 프로젝트를 진행하며 Graphql을 활용한 데이터 관리 등 Gatsby 활용 역량을 키울 수 있을 것이라 생각해서 이 프로젝트를 진행하게 되었어요.
+
+<hr/>
+
+### 2. 블로그와 포트폴리오를 합치는 이유
+
+***나만의 페이지를 만들고 싶었다*** 는 것이 가장 큰 이유에요. **scorchedrice**라는 닉네임으로 활동하고 있는데, 이 닉네임을 내새운 나만의 페이지가 있으면 좋다고 생각했어요.
+포트폴리오, 이력서, 내가 공부한 기록들 등 모든 기록을 이 페이지에서 모두 확인할 수 있으면 좋을 것이라 생각했어요.
+
+<hr/>
+
+## 결론
+
+이 게시물을 작성하는 25년 4월 22일 기준 완성된 프로젝트는 아니지만, Gatsby에 대한 아쉬움을 해결한 좋은 경험이라고 생각해요. 다음엔 어떤 식으로 기능을 구현했는지에 대한 게시물 작성해보려고합니다~!
