✨ feat: 포트폴리오 페이지 이전 완료 (프로젝트 내용은 미반영)

--- a/articles/project/slack-algobot/index.mdx
+++ b/articles/project/slack-algobot/index.mdx
@@ -6,8 +6,9 @@ tags: ["Slack", "SlackBot"]
 slug: "slack-algobot"
 hero_image: "./slack-bot.png"
 hero_image_alt: "slack-algobot"
-hero_image_credit_text: "프로그래머스 데브코스 사용자분들을 위한 슬랙봇을 개발하는 과정"
-hero_image_credit_link: ""
+git_link: "https://github.com/scorchedrice/slack-bot"
+sub_title: "자바스크립트 알고리즘 학습 보조 목적의 슬랙봇"
+summary: ["데브코스 수강생들에게 도움을 주고자 직접 개발", "문제 랜덤 추천, 자료구조 예시코드 제공 기능 개발"]
 ---
 
 import slackBotLogic1 from "./slack-bot-logic1.png";
