✨ feat: 이력서 / 포트폴리오 마무리, scorchedrice.com 프로젝트 포스트 작성

--- a/articles/project/slack-algobot/index.mdx
+++ b/articles/project/slack-algobot/index.mdx
@@ -1,14 +1,14 @@
 ---
-title: "알고리즘 역량 향상 도우미 🤖 algoBot"
+title: "알고리즘 보조 슬랙봇 - algoBot"
 date: "2025-04-23"
 category: "프로젝트"
-tags: ["Slack", "SlackBot"]
+tags: ["Bolt", "SlackBot"]
 slug: "slack-algobot"
 hero_image: "./slack-bot.png"
 hero_image_alt: "slack-algobot"
 git_link: "https://github.com/scorchedrice/slack-bot"
-sub_title: "자바스크립트 알고리즘 학습 보조 목적의 슬랙봇"
-summary: ["데브코스 수강생들에게 도움을 주고자 직접 개발", "문제 랜덤 추천, 자료구조 예시코드 제공 기능 개발"]
+sub_title: "데브코스 교육생들의 코딩테스트 대비를 돕기위한 슬랙봇"
+summary: ["자료구조에 따른 예시코드 제공 기능 개발", "조건에 적합한 알고리즘 문제 추천 기능 개발"]
 ---
 
 import slackBotLogic1 from "./slack-bot-logic1.png";
