🚑 hotfix: scorchedrice-com project link error fix

--- a/articles/project/scorchedrice-com/index.mdx
+++ b/articles/project/scorchedrice-com/index.mdx
@@ -97,7 +97,7 @@ Graphql은 요청자가 필드를 선택해서 요청을 보내고 이에 해당
 ### 두번째, 블로그 글 포스팅
 
 Gatsby의
-[File System Route]("https://www.gatsbyjs.com/docs/reference/routing/file-system-route-api/")
+[File System Route](https://www.gatsbyjs.com/docs/reference/routing/file-system-route-api/)
 기능을 활용하여 블로그 포스팅 기능을 구현했어요.
 
 FSR은 `{mdx.frontmatter__slug}.tsx`로 파일명을 구성하면 Gatsby가 이 파일명을 보고. **article/frontmatter.slug**에 해당하는 페이지를 자동으로 생성해요.
