💡update: 프로필, 프로젝트 설명 수정

--- a/articles/project/eeum-company/index.mdx
+++ b/articles/project/eeum-company/index.mdx
@@ -7,8 +7,8 @@ slug: "eeum-company"
 hero_image: "./eeum_logo.png"
 hero_image_alt: "eeum-logo"
 git_link: ""
-sub_title: "출장 세차 서비스를 중심적으로 제공하는 스타트업, 이음컴퍼니 브랜드페이지 개발"
-summary: ["API route를 활용한 백엔드 기능 구현", "협업툴과 연동되는 상담예약 시스템 개발 (진행예정)"]
+sub_title: "출장 세차 서비스를 중심적으로 제공하는 스타트업, 이음컴퍼니의 브랜드페이지 (현재 진행중)"
+summary: ["API route를 활용한 백엔드 기능", "Vercel에 배포, Neon PostgreSQL 활용", "협업툴과 연동되는 상담예약 시스템 개발 진행중"]
 ---
 
 import serviceRegion from "./service-region.gif";
