--- a/articles/project/scorchedrice-com/index.mdx
+++ b/articles/project/scorchedrice-com/index.mdx
@@ -7,13 +7,13 @@ slug: "scorchedrice-com"
 hero_image: "./scorchedrice-com.png"
 hero_image_alt: "scorchedrice-com"
 git_link: "https://github.com/scorchedrice/scorchedrice.com"
-sub_title: "기존 Jekyll 기반 블로그의 유지보수 어려움 해결, 블로그와 포트폴리오 페이지의 통합을 목적으로 개발"
-summary: ["Graphql을 활용한 데이터관리", "mdx 플러그인을 활용한 블로그 게시물 구현", "카테고리 / 태그별 / 제목 검색기능", "다크모드 / 라이트모드 구현"]
+sub_title: "기존 Jekyll 기반 블로그의 유지보수 어려움 해결, 블로그와 포트폴리오 페이지를 통합한 개인페이지"
+summary: ["GraphQL을 활용한 데이터관리", "mdx 플러그인을 활용한 블로그 게시물", "createPage 활용 페이지네이션 자동화", "검색기능", "다크/라이트모드"]
 ---
 
 import graphql from "./graphql.png"
 
-블로그와 포트폴리오 페이지를 통합한 개인 페이지 'scorchedrice'를 개발한 과정을 소개하려고해요. 왜 이 프로젝트를 시작했는지, 어떤 방식으로 구현했는지 소개할게요.
+블로그와 포트폴리오 페이지를 통합한 개인 페이지를 개발한 과정을 소개하려고해요. 왜 이 프로젝트를 시작했는지, 어떤 방식으로 구현했는지 소개할게요.
 
 <hr/>
 
