--- a/articles/project/slack-algobot/index.mdx
+++ b/articles/project/slack-algobot/index.mdx
@@ -8,7 +8,7 @@ hero_image: "./slack-bot.png"
 hero_image_alt: "slack-algobot"
 git_link: "https://github.com/hightuv/slack-bot"
 sub_title: "데브코스 교육생들을 위한 슬랙봇"
-summary: ["자료구조에 따른 예시코드 제공 기능 개발", "알고리즘 문제 추천 기능 개발"]
+summary: ["자료구조에 따른 예시코드 제공 기능", "프로그래머스 알고리즘 문제 추천 기능"]
 ---
 
 import command from "./algobot-command.png";
