--- a/articles/project/ssafy-barobaro/index.mdx
+++ b/articles/project/ssafy-barobaro/index.mdx
@@ -2,13 +2,13 @@
 title: "공연 물품 중개 플랫폼 - 바로바로"
 date: "2024-09-30"
 category: "프로젝트"
-tags: ["SSAFY", "Next.js", "Zustand"]
+tags: ["삼성청년SW아카데미", "Next.js", "Zustand"]
 slug: "ssafy-barobaro"
 hero_image: "./baro_icon.png"
 hero_image_alt: "baro_icon.png"
 git_link: ""
-sub_title: "Next.js로 개발한 웹앱"
-summary: ["FE 3, BE 3으로 진행된 팀 프로젝트, FE담당", "검색 기능 및 상세페이지 구현", "메인페이지 및 레이아웃 구현", "실시간 채팅 도중 계약 진행 로직", "PIN번호 입력 기능구현 (부인방지)"]
+sub_title: "Next.js로 개발한 중개 플랫폼"
+summary: ["FE 3, BE 3으로 진행된 팀 프로젝트, FE담당", "검색 기능 및 상세페이지", "메인페이지 및 레이아웃", "실시간 채팅 도중 계약 진행 로직", "PIN번호 입력 기능", "계약서 뷰어 기능 (@naverpay/react-pdf)"]
 ---
 
 import BaroMain from "./baro_main.png";
