--- a/articles/project/ssafy-janyang/index.mdx
+++ b/articles/project/ssafy-janyang/index.mdx
@@ -2,13 +2,13 @@
 title: "미션 참여형 알람앱 - 자냥"
 date: "2024-07-31"
 category: "프로젝트"
-tags: ["SSAFY", "Flutter", "Lottie"]
+tags: ["삼성청년SW아카데미", "Flutter", "Lottie"]
 slug: "ssafy-janyang"
 hero_image: "./janyang.png"
 hero_image_alt: "janyang.png"
 git_link: ""
-sub_title: "Flutter & OpenVidu 활용 화상회의 형식의 미션참여형 알람앱"
-summary: ["FE 2, BE 4으로 진행된 팀 프로젝트, FE담당", "Lottie를 활용한 Animated Logo 제작", "튜토리얼 기능 구현", "미션 참여 결과 제공 기능 구현", "다크모드 / 라이트모드 구현"]
+sub_title: "Flutter, OpenVidu 활용 미션참여형 알람앱"
+summary: ["FE 2, BE 4으로 진행된 팀 프로젝트, FE담당", "Animated Logo (Lottie)", "튜토리얼 기능 (TutorialCoachMark)", "닉네임 등록 유효성 확인 기능", "미션참여도 확인 기능 (FLChart, TableCalendar)", "다크/라이트모드"]
 ---
 
 import DarkLightMode from "./light_dark.gif"
