--- a/articles/project/ssafy-miruni/index.mdx
+++ b/articles/project/ssafy-miruni/index.mdx
@@ -2,13 +2,13 @@
 title: "학습 보조 데스크탑앱 - 미루니"
 date: "2024-11-30"
 category: "프로젝트"
-tags: ["SSAFY", "Electron"]
+tags: ["삼성청년SW아카데미", "Electron"]
 slug: "ssafy-miruni"
 hero_image: "./miruni_icon.png"
 hero_image_alt: "baro.png"
 git_link: ""
-sub_title: "Electron & OCR & 웹캠 활용한 학습 보조 데스크탑앱"
-summary: ["FE 1, BE 3, AI 1으로 진행된 팀 프로젝트, FE담당", "ipcRender, ipcMain을 활용한 IPC 기능 구현", "Render Process에 React, MSW 설치하여 개발 진행", "IPC 활용한 Main Process에서의 데이터 통신 기능 구현", "tessaract.js를 활용한 OCR 기능 구현", "UI/UX 구현 전 과정 담당"]
+sub_title: "OCR, 웹캠 활용한 학습 보조 데스크탑앱"
+summary: ["FE 1, BE 3, AI 1으로 진행된 팀 프로젝트, FE담당", "ipcRender, ipcMain을 활용한 IPC 기능", "IPC 활용 CORS 에러 해결, Main Process에서의 통신", "Render Process에 React, MSW 설치하여 개발", "tessaract.js를 활용한 OCR 기능"]
 ---
 
 import MiruniStudyStart from "./miruniStudy_start.png";
