🐛 fix: profile-education items-center, eeum-company href

--- a/articles/project/eeum-company/index.mdx
+++ b/articles/project/eeum-company/index.mdx
@@ -15,7 +15,7 @@ import serviceRegion from "./service-region.gif";
 import apiRouteRender from "./api-route-render.png";
 import consult from "./consult.gif";
 
-청주, 오산을 중심으로 출장 세차 서비스를 제공하는 스타트업 '이음컴퍼니'의 브랜드페이지 개발 과정을 소개합니다.
+청주, 오산을 중심으로 출장 세차 서비스를 제공하는 스타트업 <a href="https://eeum.company">'이음컴퍼니'의 브랜드페이지</a> 개발 과정을 소개합니다.
 
 <hr/>
 
