--- a/articles/project/ssafy-barobaro/index.mdx
+++ b/articles/project/ssafy-barobaro/index.mdx
@@ -8,7 +8,7 @@ hero_image: "./baro_icon.png"
 hero_image_alt: "baro_icon.png"
 git_link: ""
 sub_title: "Next.js로 개발한 중개 플랫폼"
-summary: ["FE 3, BE 3으로 진행된 팀 프로젝트, FE담당", "검색 기능 및 상세페이지", "메인페이지 및 레이아웃", "실시간 채팅 도중 계약 진행 로직", "PIN번호 입력 기능", "계약서 뷰어 기능 (@naverpay/react-pdf)"]
+summary: ["FE 3, BE 3으로 진행된 팀 프로젝트, FE담당", "검색 기능 및 상세페이지", "메인페이지 및 레이아웃", "PIN번호 입력 기능", "계약서 뷰어 기능 (@naverpay/react-pdf)"]
 ---
 
 import BaroMain from "./baro_main.png";
@@ -46,7 +46,7 @@ import BaroVerification from "./baro_verification.png";
 
 - 1. 메인페이지, 검색기능, 상세페이지, 레이아웃
 - 2. PIN번호 입력 (부인방지)
-- 3. 실시간 계약 로직
+- 3. 계약서 뷰어
 
 ### 첫번째, 메인페이지/검색/상세페이지/레이아웃 기능
 
@@ -72,18 +72,20 @@ import BaroVerification from "./baro_verification.png";
 처음 등록할 때, 재 확인 과정에서의 틀린 PIN입력이 발생했을 때 등 다양한 상황에 맞게 동작할 수 있도록 기능을 구현했어요.
 또, 입력할 때 다른 사람이 이를 보고 인식할 수 없도록 랜덤으로 다른 번호가 눌리는 것 처럼 보이는 효과를 구현했어요.
 
-### 세번째, 실시간 거래 로직
+### 세번째, 계약서 뷰어
 
 <img src={BaroContractUser} alt="baro_contract_user.png" className="mx-auto"/>
 
-가장 핵심이 되는 기능입니다. 실시간 채팅 도중 실시간 계약 작성이 가능한데, 다음의 순서로 계약을 진행해요.
+바로바로의 핵심 기능은 계약서 작성 기능이에요.
+
+실시간 채팅 도중 실시간 계약 작성이 가능한데, 다음의 순서로 계약을 진행해요.
 
 1. 소유자가 계약서를 작성한다.
 2. 소유자가 작성한 이후 대여인이 최종 확인하고 계약서를 작성한다.
 
 소유자가 대여인이 각각 거래서를 확인하고 서명하는 로직을 구현하여 실제 거래하는 과정과 동일하게 전자계약을 맺을 수 있도록 했어요.
 
-pdf 뷰어는 <a href="https://www.npmjs.com/package/@naverpay/react-pdf">@naverpay/react-pdf</a> 라이브러리를 활용하여 개발했고,
+<a href="https://www.npmjs.com/package/@naverpay/react-pdf">@naverpay/react-pdf</a> 라이브러리를 활용하여 개발했고,
 서명을 서버측에 전달하면 서버측에서 서명과 워터마크가 포함된 pdf 문서를 작성할 수 있도록 기능을 구현했어요.
 
 ## 트러블슈팅
@@ -93,14 +95,12 @@ pdf 뷰어는 <a href="https://www.npmjs.com/package/@naverpay/react-pdf">@naver
 
 이를 위해 **하나은행**에서 앱 개발을 담당하는 실무자 멘토분의 조언을 통해 PIN 번호 입력으로 부인방지 기능을 구현했어요.
 또한, 실제 효력이 있는 전자계약서 내용 구성을 위해 조사를 진행하며 계약서 내용을 구성하였고,
-계약서에 서명하는 마지막 과정에 워터마크를 삽입하여 **바로바로**에서 작성한 전자계약서임을 보장할 수 있도록 기능을 구현했어요.
+계약서에 서명하는 마지막 과정에 워터마크를 삽입하여 **바로바로**에서 작성한 전자계약서임을 보장할 수 있도록 했어요.
 
 ## 성과 & 결론
 
 실제로 서비스를 개발할 때 고려해야하는 것이 무엇인지 그 어느때보다 진지하게 고민한 프로젝트였어요.
 법적 효력이 있는 전자계약서 구성을 위해 고민하는 과정을 통해 개발 외적인 부분에서도 학습할 수 있는 좋은 기회였어요.
-
-또한, Next.js를 사용하여 개발하고, Jest를 부분적으로 활용해보며 프론트엔드 역량을 키울 수 있었던 프로젝트였어요.
 
 ## 그 외의 프로젝트 이미지
 
