📝 post: Prometheus와 Grafana를 활용한 모니터링 체계 구축, 🐛 fix: 태그 버튼 flex-wrap 적용

--- a/articles/develop/docker-2/index.mdx
+++ b/articles/develop/docker-2/index.mdx
@@ -2,7 +2,7 @@
 title: "[Docker, AWS] EC2에 Express 서버 올리기"
 date: "2025-06-02"
 category: "개발"
-tags: ["Docker"]
+tags: ["Docker", "AWS"]
 slug: "docker-2"
 hero_image: "./docker-2.png"
 hero_image_alt: "docker_2.png"
