--- a/articles/develop/slack-algobot/index.mdx
+++ b/articles/develop/slack-algobot/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "데브코스 슬랙봇"
 date: "2025-04-23"
-category: "프로젝트"
+category: "개발"
 tags: ["Bolt", "SlackBot"]
 slug: "slack-algobot"
 hero_image: "./slack-bot.png"
