--- a/articles/develop/ruby-on-rails-1/index.mdx
+++ b/articles/develop/ruby-on-rails-1/index.mdx
@@ -42,7 +42,7 @@ Ruby on Rails (`ROR`)은 풀스택 프레임워크다. `django`와 비슷한 결
 rails new ringle_ror --api --database=postgresql
 ```
 
-기존 DB에 맞춰 postgres 설정도 추가로 넣어줬다.
+DB에 맞춰 postgres 설정도 추가로 넣어줬다.
 
 물론 간단한 프로젝트의 경우엔 `sqlite`가 좋다고 한다. `ROR` 서버 내부에서 동작하게 하여 지연을 방지하고, 최근 개발진들이 `sqlite`에 대한 지원을 많이 해주고 있기 때문에,,
 
@@ -56,7 +56,7 @@ rails new ringle_ror --api --database=postgresql
 
 ```shell
 rails generate model User email:string password:string company_id:uuid
-# 참고로 updatedAt, createdAt은 자동 생성된다고한다.
+# updatedAt, createdAt은 자동 생성
 ```
 
 이를 입력하면 app/model, db/migrate 내부에 파일이 생긴다.
@@ -69,7 +69,7 @@ migrate 내부 파일은 실제 DB에 올라갈 테이블의 규격을 설정한
 
 ## Auth 구현
 
-`devise`를 주로 사용한다고 한다. 물론 [빌트인 auth를 사용](https://youtu.be/waCgItwqTOU?si=ya-1iphDjxq649LY)하는 것도 방법이지만, 많은 ROR 개발자들이 devise로 auth를 구현하는 것을 확인했다.
+`devise`를 주로 사용한다고 한다. 물론 [빌트인 auth를 사용](https://youtu.be/waCgItwqTOU?si=ya-1iphDjxq649LY)하는 것도 방법이지만, 많은 ROR 개발자들이 `devise`로 auth를 구현하는 것을 확인했다.
 
 하지만, `devise`를 활용하여 개발하면서 session 관련된 오류를 많이 봤다. 내가 구현하고자 했던 로그인 방식은 토큰방식이였기에 이와 맞지 않다고 생각했다.
 
