📝 post: 링글 인턴십 합격

--- a/articles/develop/ruby-on-rails-1/index.mdx
+++ b/articles/develop/ruby-on-rails-1/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Nest프로젝트 Ruby On Rails로 이전하기 (with 채용과제, 작성중)"
+title: "Nest프로젝트 Ruby On Rails로 이전 후기 (With 취업 과제)"
 date: "2025-07-23"
 category: "개발"
 tags: ["Ruby On Rails"]
