--- a/articles/project/rika/index.mdx
+++ b/articles/project/rika/index.mdx
@@ -24,6 +24,9 @@ import Architecture from "./architecture.png";
 - 일단 심사는 통과하자는 생각으로 테스트버전을 올려뒀습니다.
 - 정식버전은 심사중입니다. (26.02.05 심사 진행)
 
+- [소개페이지](https://rika-web.vercel.app/)
+  - 나중에 이 페이지 또한 리뉴얼 예정, 지금은 단순 기능 목적
+
 ## 목차
 
 <ul>
