--- a/articles/project/malang/index.mdx
+++ b/articles/project/malang/index.mdx
@@ -8,11 +8,7 @@ hero_image: "./malang_app_icon.png"
 hero_image_alt: "malang_icon"
 git_link: ""
 sub_title: "쇼츠 & AI 기반 한국어학습앱"
-summary:
-  [
-    "한국, 일본 iOS 앱 출시(정식버전 심사중, 현 버전: 테스트 버전)",
-    "1인 풀스택 개발",
-  ]
+summary: ["일본 iOS 앱 출시예정"]
 ---
 
 import Architecture from "./architecture.png";
